--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
                 margin-top: 2.5px;
                 border-radius: calc(15px/1.5);
             }
+            .container #map {
+                width: 100%;
+                height: 100%
+            }
         </style>
     </head>
     <body>
