--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Gaegu&display=swap');
             * {
-                border: 0;
-                padding: 0;
-                margin: 0;
-                outline: none;
-                user-select: none;
                 font-family: "Gaegu", sans-serif;
             }
             body {
@@ -66,10 +61,11 @@
                 margin: 0px 15px;
                 margin-top: 2.5px;
                 border-radius: calc(15px/1.5);
+                overflow: hidden;
             }
             .container #map {
                 width: 100%;
-                height: 100%
+                aspect-ratio: 1;
             }
         </style>
     </head>
