--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Gaegu&display=swap');
             * {
+                border: 0;
+                padding: 0;
+                margin: 0;
+                outline: none;
+                user-select: none;
                 font-family: "Gaegu", sans-serif;
             }
             body {
@@ -55,7 +60,6 @@
                 box-shadow: 0px 0px 2.5px rgba(0, 0, 0, 0.125);
             }
             .container {
-                position: relative;
                 height: calc(100% - 70px - 15px - 2.5px);
                 box-shadow: 0px 0px 2.5px rgba(0, 0, 0, 0.125);
                 margin: 0px 15px;
@@ -97,7 +101,7 @@
                         map.setView(latest, map.getZoom())
                     } else {
                         map = L.map("map").setView([latitude, longitude], 15)
-                        L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", { maxZoom: 18 }).addTo(map)
+                        L.tileLayer("https://tile.openstreetmap.org/{z}/{x}/{y}.png", { maxZoom: 18 }).addTo(map)
                     }
                     previous = latest
                 }, (error) => console.error(error), { enablehighAccuracy: true, maximumAge: 1000, timeout: 5000 })
