--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             }
             .container #map {
                 width: 100%;
-                aspect-ratio: 1;
+                height: 100%;
             }
         </style>
     </head>
