--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
         <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
         <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Gaegu&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
             * {
                 border: 0;
                 padding: 0;
                 margin: 0;
                 outline: none;
                 user-select: none;
-                font-family: "Gaegu", sans-serif;
+                font-family: "Outfit", serif;
+                font-optical-sizing: auto;
             }
             body {
                 position: absolute;
@@ -22,19 +23,20 @@
                 left: 0;
                 right: 0;
                 bottom: 0;
+                font-weight: 300;
             }
-            .navigation {
+            .navigation, .actions {
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 list-style-type: none;
                 padding: 15px 0px;
             }
-            .navigation li {
+            .navigation li, .actions li {
                 height: calc(70px - (15px * 2));
                 margin: 0px 15px;
             }
-            .navigation li.logo {
+            .navigation li.logo, .actions li.info {
                 width: 100%;
                 text-align: center;
                 display: flex;
@@ -46,11 +48,12 @@
                 font-size: 30px;
                 line-height: calc(30px/1.5);
                 letter-spacing: calc(-30px/20);
+                text-transform: lowercase;
             }
-            .navigation li button {
+            .navigation li button, .actions li button {
                 height: 100%;
                 aspect-ratio: 1;
-                font-size: 112.5%;
+                font-size: 137.5%;
                 background-color: transparent;
                 display: flex;
                 align-items: center;
@@ -61,16 +64,74 @@
                 box-shadow: 0px 0px 2.5px rgba(0, 0, 0, 0.125);
             }
             .container {
-                height: calc(100% - 70px - 15px - 2.5px);
+                position: relative;
+                height: calc(100% - 70px - 97.2px);
                 box-shadow: 0px 0px 2.5px rgba(0, 0, 0, 0.125);
                 margin: 0px 15px;
-                margin-top: 2.5px;
                 border-radius: calc(15px/1.5);
                 overflow: hidden;
             }
-            .container #map {
+            .container .tab {
+                width: 100%;
+                height: 100%;
+                display: none;
+            }
+            .container .tab #map {
+                width: 100%;
+                height: 100%;
+            }
+            .container .tab .overlay { z-index: 10000 }
+            .container .tab .overlay#map-overlay-direction {
+                position: absolute;
+                bottom: 15px;
+                left: 15px;
+                padding: 5px;
+                background-color: #FFFFFF;
+                width: 50px;
+                aspect-ratio: 1;
+                border-radius: 50%;
+                box-shadow: 0px 0px 2.5px rgba(0, 0, 0, 0.125);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+            .container .tab#compass-tab #compass-distance {
+                text-align: center;
+                font-size: 30px;
+                margin-top: 15px;
+            }
+            .container .tab#compass-tab .frame {
                 width: 100%;
                 aspect-ratio: 1;
+                border: 3.75px solid #000000;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 50%
+            }
+            .container .tab#compass-tab .frame #compass-pointer {
+                width: 50%;
+                aspect-ratio: 1;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 360%;
+                margin: 15px 0px;
+            }
+            .actions li {
+                text-align: center;
+                height: calc(97.2px - (15px * 2));
+            }
+            .actions li span {
+                font-size: calc(15px/1.1);
+                line-height: calc(15px/1.1/1.5);
+                transition: opacity 2s;
+            }
+            .actions li h1 {
+                font-size: calc(15px * 1.5);
+                line-height: calc((15px * 1.5)/1.5);
+                padding: 7.5px 0px;
+                padding-top: 10px;
             }
         </style>
     </head>
@@ -86,26 +147,159 @@
                 <button id="navigation-profile"></button>
             </li>
         </ul>
-        <div class="container">
-            <div id="map"></div>
-        </div>
+        <ul class="container">
+            <li class="tab" id="map-tab">
+                <div id="map"></div>
+                <div class="overlay" id="map-overlay-direction">
+                    <div id="map-overlay-direction-pointer" style="transform-origin: center; font-size: 150%">
+                        <i class="fa-solid fa-arrow-up"></i>
+                    </div>
+                </div>
+            </li>
+            <li class="tab" id="compass-tab">
+                <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 50%">
+                    <div class="frame" style="display: flex; align-items: center; justify-content: center">
+                        <div id="compass-pointer" style="transform-origin: center">
+                            <i class="fa-solid fa-arrow-up"></i>
+                        </div>
+                    </div>
+                    <h1 id="compass-distance"></h1>
+                </div>
+            </li>
+        </ul>
+        <ul class="actions">
+            <li>
+                <button><i class="fa-solid fa-heart"></i></button>
+            </li>
+            <li class="info">
+                <div>
+                    <span id="actions-info-country">Singapore</span>
+                    <h1 id="actions-info-distance">0.00m</h1>
+                    <span id="actions-info-speed">0.00m/s</span>
+                </div>
+            </li>
+            <li>
+                <button><i class="fa-solid fa-user-group"></i></button>
+            </li>
+        </ul>
     </body>
     <script>
         window.addEventListener("load", () => {
-            if (navigator.geolocation) {
+            actions = {
+                info: {
+                    distance: document.getElementById("actions-info-distance"),
+                    speed: document.getElementById("actions-info-speed"),
+                    country: document.getElementById("actions-info-country")
+                }
+            }
+            container = {
+                map: {
+                    overlay: {
+                        direction: [{
+                            pointer: document.getElementById("map-overlay-direction-pointer")
+                        }, document.getElementById("map-overlay-direction")]
+                    }
+                },
+                compass: [{
+                    pointer: document.getElementById("compass-pointer"),
+                    distance: document.getElementById("compass-distance")
+                }, document.getElementById("compass-tab")],
+                active: "map"
+            }
+            function selectTab(id) {
+                tabs = document.getElementsByClassName("tab")
+                for (var tab in tabs) {
+                    tab = tabs[tab]
+                    if (tab.className) {
+                        if (tab.id.split("-")[0] === id) {
+                            tab.style.display = "block"
+                            container.active = id
+                        } else {
+                            tab.style.display = "none"
+                        }
+                    }
+                }
+            }
+            function calcDegreeToPoint(latitude, longitude, point) {
+                const phiK = (point.lat * Math.PI) / 180.0
+                const lambdaK = (point.lng * Math.PI) / 180.0
+                const phi = (latitude * Math.PI) / 180.0
+                const lambda = (longitude * Math.PI) / 180.0
+                const psi =
+                    (180.0 / Math.PI) *
+                    Math.atan2(
+                    Math.sin(lambdaK - lambda),
+                    Math.cos(phi) * Math.tan(phiK) -
+                        Math.sin(phi) * Math.cos(lambdaK - lambda)
+                    )
+                return Math.round(psi)
+            }
+            if (navigator.geolocation && window.DeviceOrientationEvent) {
                 previous = null
+                latest = null
                 map = null
+                distance = 0
+                destination = { lat: 1.3114177, lng: 103.8559662 }
                 navigator.geolocation.watchPosition(function(position){
                     let { latitude, longitude } = position.coords
-                    latest = L.latLng(latitude, longitude)
+                    latest = [L.latLng(latitude, longitude), [latitude, longitude]]
                     if (previous) {
-                        map.setView(latest, map.getZoom())
-                    } else {
-                        map = L.map("map").setView([latitude, longitude], 18)
-                        L.tileLayer("https://tile.openstreetmap.org/{z}/{x}/{y}.png", { maxZoom: 18 }).addTo(map)
+                        latestDistance = latest[0].distanceTo(previous[0])
+                        speed = latestDistance/((Date.now() - previous[1])/1000)
+                        if (speed < 12 && speed > 0.75) {
+                            distance += latestDistance
+                            actions.info.speed.textContent = speed.toFixed(2) + "m/s"
+                            if (distance > 1000) {
+                                actions.info.distance.textContent = (distance/1000).toFixed(2) + "km"
+                            } else {
+                                actions.info.distance.textContent = distance.toFixed(2) + "m"
+                            }
+                            if (container.active === "map") map.setView(latest[0], map.getZoom())
+                        } else {
+                            actions.info.speed.textContent = (0).toFixed(2) + "m/s"
+                        }
+                        container.compass[0].distance.textContent = Math.round(latest[0].distanceTo(L.latLng(destination.lat, destination.lng))) + "m"
+                    } else if (container.active === "map") {
+                        map = L.map("map").setView([latitude, longitude], 20)
+                        L.tileLayer('https://{s}.google.com/vt/lyrs=m&x={x}&y={y}&z={z}',{
+                            maxZoom: 20,
+                            subdomains:['mt0','mt1','mt2','mt3']
+                        }).addTo(map)
+                        actions.info.country.textContent = "Singapore"
                     }
-                    previous = latest
-                }, (error) => console.error(error), { enablehighAccuracy: true, maximumAge: 1000, timeout: 5000 })
+                    previous = [latest[0], Date.now()]
+                }, (error) => console.error(error), { enableHighAccuracy: true, maximumAge: 1000, timeout: 5000 })
+                window.addEventListener("deviceorientationabsolute", (event) => {
+                    if (latest) {
+                        compass = event.webkitCompassHeading || Math.abs(event.alpha - 360)
+                        toPoint = calcDegreeToPoint(latest[1][0], latest[1][1], destination)
+                        accuracy = (1 - (((toPoint - compass) < 0 ? 0 - (toPoint - compass) : (toPoint - compass))/15))
+                        if (container.active === "map") {
+                            if (accuracy > 0) {
+                                container.map.overlay.direction[0].pointer.style.color = "#FFFFFF"
+                                container.map.overlay.direction[1].style.backgroundColor = "#2ECC71"
+                            } else {
+                                container.map.overlay.direction[0].pointer.style.color = "#000000"
+                                container.map.overlay.direction[1].style.backgroundColor = "#FFFFFF"
+                            }
+                            container.map.overlay.direction[0].pointer.style.transform = `rotate(${toPoint - compass}deg)`
+                        } else if (container.active === "compass") {
+                            if (accuracy > 0) {
+                                container.compass[0].pointer.parentElement.style.border = "3.75px solid #FFFFFF"
+                                container.compass[0].pointer.style.color = "#FFFFFF"
+                                container.compass[1].style.backgroundColor = "#2ECC71"
+                                container.compass[0].distance.style.color = "#FFFFFF"
+                            } else {
+                                container.compass[0].pointer.parentElement.style.border = "3.75px solid #000000"
+                                container.compass[0].pointer.style.color = "#000000"
+                                container.compass[1].style.backgroundColor = "#FFFFFF"
+                                container.compass[0].distance.style.color = "#000000"
+                            }
+                            container.compass[0].pointer.style.transform = `rotate(${toPoint - compass}deg)`
+                        }
+                    }
+                }, true)
+                selectTab("compass")
             } else alert("not supported.")
         })
     </script>
