--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 latest = null
                 map = null
                 distance = 0
-                walkingOnly = true
+                walkingOnly = false
                 destination = { lat: 1.4625025, lng: 103.7632889 }
                 navigator.geolocation.watchPosition(function(position){
                     let { latitude, longitude } = position.coords
